# Discrete-Project-New

./: .gitignore  AllWidgets.cpp  CMakeLists.txt  ConsistencyChecker.cpp  CoursePrerequisiteManager.cpp  CoursePrerequisiteManager.h  CoursePrerequisiteWidget.cpp  DiscreteProject.vcxproj  EfficiencyBenchmarks.cpp  EfficiencyBenchmarks.h  FunctionsManager.cpp  FunctionsManager.h  IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  InductionEngine.cpp  InductionEngine.h  InductionEngineWidget.cpp  LogicInferenceEngine.cpp  LogicInferenceEngine.h  LogicInferenceWidget.cpp  MainManager.cpp  MainManager.h  MainWindow.cpp  Module.h  PROJECT_SUMMARY.md  ProofEngine.cpp  ProofEngineWidget.cpp  README.md  RelationPropertiesChecker.cpp  SetOperationsManager.cpp  SetOperationsWidget.cpp  StudentGroup.cpp  Tests.cpp  Tests.h  UnidiscEngine.pro  WINDOWS_SETUP_GUIDE.md  build.bat  build.sh  main.cpp  main_gui.cpp
include/: AllWidgets.h  ConsistencyChecker.h  ConsistencyCheckerWidget.h  CoursePrerequisiteManager.h  CoursePrerequisiteWidget.h  EfficiencyBenchmarksWidget.h  FunctionsManagerWidget.h  InductionEngineWidget.h  LogicInferenceWidget.h  MainWindow.h  ProofEngine.h  ProofEngineWidget.h  RelationPropertiesChecker.h  RelationPropertiesWidget.h  SetOperationsManager.h  SetOperationsWidget.h  StudentGroup.h  StudentGroupWidget.h  TestsWidget.h
resources/: resources.qrc
src/: ConsistencyCheckerWidget.cpp  CoursePrerequisiteManager.cpp  EfficiencyBenchmarks.cpp  EfficiencyBenchmarksWidget.cpp  FunctionsManagerWidget.cpp  RelationPropertiesWidget.cpp  StudentGroup.cpp  StudentGroupWidget.cpp  TestsWidget.cpp  main.cpp
